# graph-viewer

./: .gitignore  README.md
lib/: CMakeLists.txt
lib/include/: viewer.hpp
lib/source/: viewer.cpp
test/tree/: CMakeLists.txt  edges.txt  test.sh  tree.cpp
